fix: width of certificates-section on mobile

--- a/src/scss/pages/about-page.scss
+++ b/src/scss/pages/about-page.scss
@@ -53,7 +53,7 @@
     }
     @include phone {
         .swiper-slide {
-            width: 11.875rem;
+            width: 100%;
         }
     }
 }
